# slam_learn

./: CMakeLists.txt  Cargo.toml  Makefile  build.rs  build_bak.rs  gtsam_demo.cc  readme.md  rust调用C++&C静态库.md  rust调用gtsam的动态库.md
ceres_demo/: ceres_ba.cc  ceres_ba.h  ceres_warp.cc  ceres_warp.h
data/: opt_poses.txt  ori_poses.txt
gtsam_build_demo/: CMakeLists.txt  Makefile  build_static.cc  gtsam_build.cc  gtsam_build.h
src/: bag_of_words.rs  bag_opecv_util.rs  bindings.rs  ceres_bind.rs  cxx_build.rs  lib.rs  main.rs  pose_estimation.rs  se3.rs  so3.rs
src/bal_optimization/: bal_bind.rs  mod.rs  optimization.rs
src/bal_optimization/ceres_bal/: bal.cc  bal.h
src/lie_group/: se3.rs  so3.rs
src/lk_flow/: flow.rs  mod.rs
src/pose_estimation/: ceres_ba_bind.rs  mod.rs  pose_estimation.rs  pose_estimation2d2d.rs  pose_estimation3d2d.rs
src/pose_graph_optimization/: mod.rs  optimization.rs  polt.py  pose_bind.rs  readme.md
src/pose_graph_optimization/ceres_pose_graph/: pose.cc  pose.h
