[package]
name = "gtsam_build"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
nalgebra="0.32.1"
cxx = "1.0"
rand = "0.8.5"
rand_distr = "0.4.3"
opencv = "0.77.0"


[build-dependencies]
cxx-build = "1.0"
pkg-config = "0.3.26"
bindgen = "0.64.0"
cc = "1.0"
cmake = "0.1"

[profile.dev]
rpath = true

[build]
